--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
-    "vue": "^3.5.18"
+    "chart.js": "^4.5.0",
+    "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
